Font-weight 600 consistently caused font-face bug
#596

This was the only place we were able to consistently see the text not
rendering, so have temporarily removed the font-weight to solve this
individual bug.

To replicate:
- new client file
- new prognote
- only fill out “Notes”
- save
- header for “Notes” not visible

--- a/src/clientFilePage/progNotesTab.styl
+++ b/src/clientFilePage/progNotesTab.styl
@@ -254,7 +254,7 @@
 
 						h3
 							padding 6px 0
-							font-weight 600
+							// font-weight 600 // Removed because of font-face bug #596
 							font-size 18px
 							opacity 0.75
 
